fix: collection 삭제, 각 미션 별 매칭 초기화 기능 추가, 객체 생성 오류 수정